--- a/src/resource/css/Home.css
+++ b/src/resource/css/Home.css
@@ -7,7 +7,7 @@
 /* # first page */
 
 .firstPage {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.158), rgba(255, 255, 255, 0.74)), url('./resource/background-imag.jpg');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.158), rgba(255, 255, 255, 0.74)), url('../img/background-imag.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
