--- a/src/resource/css/Receita.css
+++ b/src/resource/css/Receita.css
@@ -81,8 +81,12 @@
     margin: 10px;
   }
 
-  .tableName{
+  .tableName {
     display: none;
+  }
+
+  .cardReceita {
+    margin-bottom: 30px;
   }
 }
 
@@ -99,8 +103,8 @@
     margin: 10px;
   }
 
-  
-  .cardReceita{
+
+  .cardReceita {
     display: none;
   }
 }
@@ -121,15 +125,15 @@
     margin: 10px;
   }
 
-  
-  .cardReceita{
+
+  .cardReceita {
     display: none;
   }
 }
 
 /* # card */
 
-.card{
+.card {
   display: flex;
   padding: 5px;
   flex-direction: column;
@@ -138,10 +142,40 @@
   box-shadow: 3px 5px #88888828;
 }
 
-.titleCardBody{
+.titleCardBody {
   font-size: 1.5em;
 }
 
 .colorGreen {
   color: green;
+}
+
+.butoonFloat {
+  position: fixed;
+  background-color: rgb(66, 62, 62);
+  height: 50px;
+  width: 50px;
+  z-index: 100;
+  color: white;
+  font-size: 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  bottom: 30px;
+  right: 30px;
+  border: none;
+}
+
+.butoonFloat:hover {
+  position: fixed;
+  background-color: rgb(46, 45, 45);
+  height: 55px;
+  width: 55px;
+  color: white;
+  font-size: 1.7em;
+
+  border-radius: 100%;
+  bottom: 30px;
+  right: 30px;
 }
