--- a/public/resource/index.css
+++ b/public/resource/index.css
@@ -15,3 +15,22 @@
 .colorRedLight {
     color: rgb(255, 97, 97);
 }
+
+
+/* # background color */
+
+.backcolorGreen {
+    background-color: green;
+}
+
+.backcolorRed {
+    background-color: red;
+}
+
+.backcolorGreenLight {
+    background-color: rgb(68, 129, 68);
+}
+
+.backcolorRedLight {
+    background-color: rgb(255, 97, 97);
+}
