--- a/public/resource/index.css
+++ b/public/resource/index.css
@@ -34,3 +34,24 @@
 .backcolorRedLight {
     background-color: rgb(255, 97, 97);
 }
+
+/* 
+################
+#### RESUMO ####
+################ 
+*/
+
+/* # title resumo */
+.tableResumo {
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.tableResumoTitle {
+    color: black;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0px;
+}
