--- a/src/resource/css/HeaderDash.css
+++ b/src/resource/css/HeaderDash.css
@@ -4,6 +4,7 @@
 ################ 
 */
 
+    
 .header {
     height: 50px;
     display: flex;
@@ -49,6 +50,69 @@
 }
 
 .MenuDashUser{
+    display: flex;
+    align-items: center;
+    margin: 10px;
+}
+
+@media (max-width: 599px) {
+    .headerControler {
+        display: none;
+    }
+}
+    
+
+
+/* 
+##################
+####  HEADER  ####
+#### Sandwich ####
+################## 
+*/
+
+
+
+@media (min-width: 600px) {
+    .headerSandwichControler {
+        display: none;
+    }
+}
+
+.header-img-Sandwich {
+    display: flex;
+    justify-content: center;
+}
+
+.MenuDashSandwich {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+.menuDashTitleSandwich {
+    padding: 10px;
+    font-size: 25pt;
+}
+
+
+.menuDashTitleSandwich a {
+    text-decoration: none;
+    color: black;
+}
+
+.menuDashTitleSandwich a:hover {
+    color: rgba(104, 97, 97, 0.199);
+}
+
+.menuDashTitleSandwich a:visited {
+    color: black;
+}
+
+.hrSandwich {
+    width: 50vw;
+}
+
+.MenuDashUserSandwich {
     display: flex;
     align-items: center;
     margin: 10px;
