--- a/src/resource/css/cadastro.css
+++ b/src/resource/css/cadastro.css
@@ -41,34 +41,64 @@
 }
 
 
-.butoonFloatCad {
+
+
+.butoonFloatPosition {
     position: fixed;
-    background-color: rgb(16, 88, 6);
-    height: 50px;
-    width: 50px;
     z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    bottom: 50px;
+    right: 50px;
+    border: none;
+}
+
+
+.butoonFloatDelete {
+    margin: 5px;
+    background-color: rgb(255, 0, 0);
+    height: 40px;
+    width: 40px;
     color: white;
     font-size: 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 100%;
-    bottom: 50px;
-    right: 30px;
+    border: none;
+}
+
+
+.butoonFloatDelete:hover {
+    margin: 5px;
+    background-color: rgb(255, 0, 0, 0.80);
+    color: rgba(255, 255, 255, 0.40);
+    font-size: 1.7em;
+}
+
+
+
+.butoonFloatCad {
+    margin: 5px;
+    background-color: rgb(16, 88, 6);
+    height: 50px;
+    width: 50px;
+    color: white;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
     border: none;
 }
 
 .butoonFloatCad:hover {
-    position: fixed;
-    background-color: rgb(13, 71, 5);
-    height: 55px;
-    width: 55px;
-    color: white;
+    margin: 5px;
+    background-color: rgb(16, 88, 6, 0.80);
+    color: rgba(255, 255, 255, 0.40);
     font-size: 1.7em;
-
-    border-radius: 100%;
-    bottom: 50px;
-    right: 30px;
 }
 
 /* 640 / 1007 / 1008 */
